# src/HouseFlow.Application/DTOs/AuthDtos.cs
@@ -16,5 +16,6 @@ public record UserDto(
     string LastName,
     string Email,
     string Theme = "system",
-    string Language = "fr"
+    string Language = "fr",
+    bool ConsentRequired = false
 );
